--- a/encripter.html
+++ b/encripter.html
@@ -17,9 +17,9 @@
         <div class="input-text">
             <textarea type="text-area" id="texto" class="contenedor" placeholder="Tu texto" rows="5" cols="30"></textarea>
             <br>
-            <input type="button" id="button4"  value="Encriptar">
-            <input type="button" id="button5"  value="Desencriptar">
-            <input id="button2" type="button" value="Pegar">
+            <input type="button" id="button4" class="btn-action" value="Encriptar">
+            <input type="button" id="button5" class="btn-action"  value="Desencriptar">
+            <input id="button2" class="btn-secondary" type="button" value="Pegar">
         </div>
 
        
@@ -27,8 +27,8 @@
         <div class="input-text">
             <textarea type="text" id="bin" class="contenedor" placeholder="Resultado" rows="5" cols="30"></textarea>
             <br>
-            <input id="button" type="button" value="Copiar">
-            <input type="button" id="button3"  value="Borrar todo!">
+            <input id="button" class="btn-secondary" type="button" value="Copiar">
+            <input type="button" id="button3" class="btn-erase" value="Borrar todo!">
         </div>
 
         <br><br>
